# confine

./: CMakeLists.txt
autotests/: CMakeLists.txt  configxttest.cpp  configxttest.h  immutabletest.cpp  immutabletest.h  userprofilemanagertest.cpp  userprofilemanagertest.h  usertest.cpp  usertest.h
autotests/data/: file1.kcfg  kjotsrc
autotests/data/kf5-profile/: kdeglobals
docs/: actions.kiosk
src/: Messages.sh  configdialog.cpp  configdialog.h  configdialog.ui  configurationinfomanager.cpp  configurationinfomanager.h  configxtreader.cpp  configxtreader.h  confineconfiguration.cpp  confineconfiguration.h  copyconfigfile.cpp  copyconfigfile.h  copyconfigfile.ui  createprofile.cpp  createprofile.h  createprofile.ui  kconfigfileinfo.cpp  kconfigfileinfo.h  kconfigimmutable.cpp  kconfigimmutable.h  kderestrictions.ui  kentryinfo.cpp  kentryinfo.h  kgroupinfo.cpp  kgroupinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h  profilemanager.cpp  profilemanager.h  restrictionelement.cpp  restrictionelement.h  restrictionsdialog.cpp  restrictionsdialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  (+6 more)
